[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemies/BigBoy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Asset Scenes/BigBoyModel.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.5, 319.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 31 )

[node name="BigBoy" type="Area2D" groups=["Entity"]]
collision_layer = 4
collision_mask = 72
script = ExtResource( 2 )

[node name="BigBoyModel" parent="." instance=ExtResource( 3 )]
position = Vector2( -26, 0 )
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -32.5, -0.5 )
shape = SubResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FractalTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -126, 0 )
shape = SubResource( 2 )

[connection signal="timeout" from="FractalTimer" to="." method="fire_fractal"]
